unpackaged/main/default/objects/Point_Cap_Rate__c/Point_Cap_Rate__c.object-meta.xml
<CustomObject>
    <label>Point Cap Rate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Point Cap Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>