unpackaged/main/default/objects/Point_Cap_Rate__c/fields/Default_Point__c.field-meta.xml
<CustomField>
    <fullName>Default_Point__c</fullName>
    <description>Used in Sales Calculator as the assigned default point, and will also be the overriding point value for MCO team</description>
    <label>Default Point</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>