unpackaged/main/default/objects/Point_Cap_Rate__c/fields/Funding_Amount_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Funding_Amount_Maximum__c</fullName>
    <description>This is the Maximum funding amount this point cap can be used for</description>
    <inlineHelpText>This is the Maximum funding amount this point cap can be used for</inlineHelpText>
    <label>Funding Amount Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>