unpackaged/main/default/objects/Point_Cap_Rate__c/fields/Point_Cap_Definition__c.field-meta.xml
<CustomField>
    <fullName>Point_Cap_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point Cap Definition</label>
    <referenceTo>Point_Cap_Definition__c</referenceTo>
    <relationshipLabel>Point Cap Rates</relationshipLabel>
    <relationshipName>Point_Cap_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>